# ocl_file_loader

./: CMakeLists.txt  Readme.md  test_opencl_mmap.cpp
